Fix app logo overflowing menu header layout

--- a/axelor-front/src/layout/nav-drawer/nav-drawer.module.scss
+++ b/axelor-front/src/layout/nav-drawer/nav-drawer.module.scss
@@ -21,13 +21,15 @@
 .appLogo {
   cursor: pointer;
   user-select: none;
+  height: 32px !important;
   svg {
     display: block;
     height: 32px;
     width: 100px !important;
   }
   img {
-    height: 32px !important;
+    max-width: 100%;
+    max-height: 100%;
     vertical-align: middle;
   }
 }
